fix (styles) images were overflowing the modal

--- a/app/styles/less/modal.less
+++ b/app/styles/less/modal.less
@@ -16,8 +16,11 @@
         border-bottom: 4px solid @mssBlue100;
     }
 
-    .modal-body p{
+    .modal-body{
+      p{
         font-size: 1.5em;
+      }
+
 
         img{
             width: 100%;
